--- a/Dashboard/css/sb-admin-2.css
+++ b/Dashboard/css/sb-admin-2.css
@@ -2491,6 +2491,7 @@ fieldset:disabled a.btn {
     position: absolute;
     width: 100%;
     z-index: 1000;
+    display: none;
 }
 
 .suggestion {
